fix: word spacing / close #29

--- a/packages/zenn-cli/styles/_reset.scss
+++ b/packages/zenn-cli/styles/_reset.scss
@@ -1,7 +1,6 @@
 html {
   box-sizing: border-box;
   font-size: 16px;
-  word-spacing: 1px;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   line-height: 1.8;
