--- a/packages/zenn-content-css/src/_content.scss
+++ b/packages/zenn-content-css/src/_content.scss
@@ -216,7 +216,7 @@ code {
   font-size: 0.92em;
   border-radius: 4px;
   vertical-align: 0.08em;
-  font-family: Menlo, Monaco, Consolas, Meiryo, "Inter", sans-serif,
+  font-family: Menlo, Monaco, Consolas, Meiryo, "Inter", monospace,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   -webkit-font-smoothing: antialiased;
 }
